--- a/css/resume.css
+++ b/css/resume.css
@@ -67,7 +67,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #BD5D38;
+  background-color: #72dbc1;
 }
 
 .dev-icons {
@@ -75,7 +75,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #72dbc1;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -155,15 +155,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #72dbc1 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #72dbc1 !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #72dbc1;
 }
 
 a:hover, a:focus, a:active {
